@@ -1,3 +1,11 @@
+2022-03-09  Alex Christensen  <achristensen@webkit.org>
+
+        Fix AppleWin build
+        https://bugs.webkit.org/show_bug.cgi?id=236131
+
+        * platform/VideoFrame.cpp:
+        (WebCore::VideoFrame::asVideoFrameCV):
+
 2022-03-09  Antoine Quint  <graouts@webkit.org>
 
         [web-animations] dominant-baseline should support discrete animation
